<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">The Climbing</string>

    <string name="button_use_camera">TAKE\nPHOTO</string>
    <string name="button_use_gallery">USE\nGALLERY</string>

    <string name="solved">SOLVED</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="comment">COMMENT</string>
    <string name="share">SHARE</string>
    <string name="save">SAVE INTO GALLERY</string>
    <string name="done">DONE</string>
    <string name="export_problem">EXPORT</string>
    <string name="import_problem">IMPORT</string>
    <string name="open_source_license">OPEN SOURCE LICENSE</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="setting">SETTING</string>
    <string name="asc">OLDEST</string>
    <string name="desc">NEWEST</string>

    <string name="backup">BACKUP(beta)</string>

    <string name="time_just_now">just now</string>
    <string name="time_min">%d min</string>
    <string name="time_hrs">%d hrs</string>
    <string name="time_day">%d days</string>
    <string name="time_date">yy.MM.dd</string>
    <string name="time_date_time">MMM d yyyy h:mma</string>

    <string name="editor_create">CREATE</string>
    <string name="editor_edit">EDIT</string>
    <string name="editor_clear">CLEAR</string>
    <string name="editor_change_color">CHANGE COLOR</string>
    <string name="editor_start_top">START/TOP</string>
    <string name="editor_number">SEQUENCE</string>

    <string name="dialog_finish">FINISH</string>

    <string name="alert_delete">Are you sure you want to delete this?</string>

</resources>
