<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.kayadami.bouldering.app.setting.SettingViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eaeaea"
        tools:context=".app.setting.SettingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:theme="@style/toolbarDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/backup"
                android:textColor="#3c3c3c"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/buttonExport"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/export_problem"
                android:textColor="#3c3c3c"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/buttonImport"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/import_problem"
                android:textColor="#3c3c3c"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="#dadada" />

            <TextView
                android:id="@+id/buttonOpenSourceLicense"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/open_source_license"
                android:textColor="#3c3c3c"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="#dadada" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.progressVisibility ?? View.GONE}" />

    </FrameLayout>

</layout>